--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
 	<groupId>com.bolsadeideas.springboot.backend.apirest</groupId>
 	<artifactId>spring-boot-backend-apirest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-
+ 
+	<packaging>war</packaging>
+	
 	<name>spring-boot-backend-apirest</name>
 	<description>Demo project for Spring Boot</description>
 
@@ -59,6 +61,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-tomcat</artifactId>
+		   <scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
@@ -72,7 +80,16 @@
 			<version>20200518</version>
 		</dependency>
 
-
+		<dependency>
+		    <groupId>commons-net</groupId>
+		    <artifactId>commons-net</artifactId>
+		    <version>3.6</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.54</version>
+		</dependency>
 	</dependencies>
 
 	<build>
