commit para Hiram

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ API_CONTEXT_ROOT=/spring-boot-backend-apirest/src/main/resources
 #spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
 server.port=8090
+
+##send email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.protocol=smtp
+spring.mail.username=oscar.gutierrez@ujed-mx
+spring.mail.password=expresion2
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.quitwait=false
