--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 		    <artifactId>jsch</artifactId>
 		    <version>0.1.54</version>
 		</dependency>
+		
+		<dependency>
+		   <groupId>org.springframework.boot</groupId>
+		   <artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
