parametros del application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
+#spring.datasource.url=jdbc:oracle:thin:@192.168.1.185:1527:sai5
+#spring.datasource.username=SIIA
+#spring.datasource.password=siiasai5
 spring.datasource.url=jdbc:oracle:thin:@192.168.1.184:1527:sai2
 spring.datasource.username=TESOPORTAL
-spring.datasource.password=TP2020
+spring.datasource.password=TP1968
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 API_CONTEXT_ROOT=/spring-boot-backend-apirest/src/main/resources
@@ -12,8 +15,8 @@ server.port=8090
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.protocol=smtp
-spring.mail.username=oscar.gutierrez@ujed-mx
-spring.mail.password=expresion2
+spring.mail.username=siia.ujed@ujed.mx
+spring.mail.password=DesaSist2020
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
